# rexpy

./: LICENSE  README.md  app.py  boss_selenium.py  config.py  constant.py  db.py  db_model.py  encoder.pkl  main.css  main.py  prediction_model.py  pyproject.toml  salary_prediction_model.pkl
data/: clean_boss.hpl  clean_boss.xlsx  error_data.xlsx  test.csv
ui/page/: industry.py  prediction.py  recommendation.py  requirement.py  root.py  show.py  test.py  wordcloud.py
