[project]
name = "rexpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=5.3.0",
    "pyproject-toml>=0.0.10",
    "selenium>=4.24.0",
    "sqlalchemy>=2.0.25",
    "taipy>=3.1.1",
]

[tool.uv]
dev-dependencies = ["ruff>=0.6.3"]
